--- a/src/Forms/InviteCodeForm/InviteCodeForm.scss
+++ b/src/Forms/InviteCodeForm/InviteCodeForm.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 70%;
     height: 50%;
 
     .select-wrapper {
